name:                   hubbub
version:                0.1.0.0
synopsis:               Hub implementation of the PubSubHubbub spec ( https://code.google.com/p/pubsubhubbub/ )
description:            The intent of this server is to allow low latency subscription
                        to HTTP resources. The idea is that the publisher adds a 
                        hyperlink to their resource (in the response header, meta tags
                        etc) to a PubSubHubbub server. The subscriber can then 
                        register a url to call back to when subscribed resource 
                        that should be quicker and more scalable than each subscriber
                        polling for changes. 
homepage:               http://github.com/benkolera/haskell-hubbub
license:                MIT
license-file:           LICENSE
author:                 Ben Kolera
maintainer:             ben.kolera@gmail.com
category:               Unknown
build-type:             Simple
cabal-version:          >=1.10

Flag testing
  Default: False
  Description:          Set this to true if we don't want to build the lib and exe 
                        to speed up testing (don't want to build the lib twice). 

executable hubbub
  if !flag(testing)
    Buildable:          True          
  else
    Buildable:          False

  main-is:              Main.hs

  build-depends:        base ==4.6.*
                        , hubbub
  hs-source-dirs:       src
  ghc-options:          -Wall -Werror
  default-language:     Haskell2010
  default-extensions:   OverloadedStrings
                        NoImplicitPrelude 


library
  if !flag(testing)
    exposed-modules:    Network.Hubbub
  else
    exposed-modules:    

  build-depends:        base == 4.*
                      , acid-state
                      , aeson
                      , base
                      , bytestring
                      , bytedump
                      , case-insensitive
                      , conduit
                      , containers
                      , Crypto
                      , datetime
                      , data-default
                      , either
                      , errors
                      , failure
                      , http-conduit
                      , mtl
                      , random
                      , safe
                      , safecopy
                      , stm
                      , text
                      , time
                      , transformers
                      , utf8-string
                      , url
  ghc-options:          -rtsopts
                        -Wall
                        -O2
                        -Werror
  hs-source-dirs:       src
  default-extensions:   OverloadedStrings
                        NoImplicitPrelude
  default-language:     Haskell2010


test-suite Tests
  hs-source-dirs:       src
                        test
  ghc-options:          -rtsopts
                        -Wall
                        -O2
  main-is:              Test.hs
  Type:                 exitcode-stdio-1.0
  default-extensions:   OverloadedStrings
                        NoImplicitPrelude
  default-language:     Haskell2010
  build-depends:        base == 4.*
                      , acid-state
                      , aeson
                      , bytestring
                      , bytedump
                      , case-insensitive
                      , conduit
                      , containers
                      , Crypto
                      , datetime
                      , data-default
                      , either
                      , errors
                      , failure
                      , http-conduit
                      , http-types
                      , mtl
                      , random
                      , safe
                      , safecopy
                      , scotty 
                      , stm 
                      , text
                      , time
                      , transformers
                      , url
                      , utf8-string
                      , HUnit
                      , tasty
                      , tasty-hunit
                      , wai-extra
